<resources>
    <string name="app_name">Health OS</string>
</resources>
